--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,35 @@
 {
+  "emulators": {
+    "auth": {
+      "port": 6000
+    },
+    "functions": {
+      "port": 8531
+    },
+    "firestore": {
+      "port": 8000
+    },
+    "database": {
+      "port": 7000
+    },
+    "hosting": {
+      "port": 6001
+    },
+    "pubsub": {
+      "port": 7986
+    },
+    "storage": {
+      "port": 3131
+    },
+    "eventarc": {
+      "port": 9696
+    },
+    "ui": {
+      "enabled": true,
+      "port": 4000
+    },
+    "singleProjectMode": true
+  },
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
